# jarvis

./: .gitignore  Jarvis Simulation 2.docx  README.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
jarvis_backend/: .gcloudignore  Dockerfile  cleanup_db.py  clear_chats.py  deploy.ps1  deploy.sh  langchain_help.txt  langfuse_help.txt  pyproject.toml  scratch_test_agent.py  tasks.db  test_main.py
jarvis_backend/src/: agent.py  database.py  firebase_config.py  logger.py  main.py  mcp_registry.py  mcp_server.py  models.py  schemas.py
jarvis_mobile/: .firebaserc  .gitignore  README.md  analyze.txt  firebase.json  pubspec.yaml
jarvis_mobile/android/app/: build.gradle.kts  google-services.json
jarvis_mobile/ios/Runner/: Info.plist
jarvis_mobile/ios/Runner.xcodeproj/: project.pbxproj
jarvis_mobile/lib/: firebase_options.dart  main.dart
jarvis_mobile/lib/models/: chat_thread.dart  note.dart  task.dart
jarvis_mobile/lib/providers/: auth_provider.dart  chat_provider.dart  chat_threads_provider.dart  note_provider.dart  task_provider.dart
jarvis_mobile/lib/services/: api_service.dart  auth_service.dart  geofence_service.dart
jarvis_mobile/lib/utils/: logger.dart
jarvis_mobile/linux/: CMakeLists.txt
jarvis_mobile/linux/runner/: my_application.cc
jarvis_mobile/macos/Runner.xcodeproj/: project.pbxproj
jarvis_mobile/scripts/: generate_keystore.ps1
jarvis_mobile/test/: widget_test.dart
jarvis_mobile/web/: index.html  manifest.json
jarvis_mobile/windows/: CMakeLists.txt
jarvis_mobile/windows/runner/: Runner.rc  (+1 more)
(+35 files in other folders)
