[project]
name = "jarvis-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.1",
    "fastmcp>=3.2.4",
    "firebase-admin>=7.4.0",
    "httpx>=0.28.1",
    "langchain>=1.2.17",
    "langchain-google-genai>=4.2.2",
    "langchain-google-vertexai>=2.0.0",
    "langchain-mcp-adapters>=0.2.2",
    "langfuse>=4.5.1",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "mcp>=1.27.0",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "geopy>=2.4.1",
]
